# DG-MCP

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.md  pyproject.toml
dg_mcp/: device.py  lovense.py  protocol.py  server.py  waves.py
docs/UAT/: kink-mcp-uat.md
kink_mcp/: config.py  server.py  ui.py  waves.py
tests/: test_config.py
