[project]
name = "kink-mcp"
version = "0.2.0"
description = "MCP Server for DG-Lab Coyote 3.0 via BLE"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "0xNull.AI", email = "271426072+0xNullAI@users.noreply.github.com" }]
requires-python = ">=3.10"
keywords = ["mcp", "dg-lab", "ble", "bluetooth", "coyote"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "bleak>=0.22.0",
    "humanize>=4.0.0",
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/0xNullAI/kink-mcp"
Repository = "https://github.com/0xNullAI/kink-mcp"
Issues = "https://github.com/0xNullAI/kink-mcp/issues"

[project.scripts]
kink-mcp = "kink_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
